# todo-api

./: Cargo.toml
data/: data.json
src/: database.rs  main.rs  req.rs  utils.rs
src/gets/: mod.rs
src/utils/: mod.rs
