[package]
name = "todo-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-web = { version = "4", features = ["openssl"] }
serde = { version = "1.0.171", features = ['derive'] }
serde_json = "1.0.100"
openssl = { version = "0.10", features = ["v110"] }
rustfmt = "0.10.0"
mongodb = "2.6.0"
tokio = "1.29.1"
